--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         <a [routerLink]="['/edit']" routerLinkActive="router-link-active" class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope" ></mdb-icon> contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="cog"></mdb-icon> Settings</a>
+        <a [routerLink]="['/getall']" routerLinkActive="router-link-active" class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="cog"></mdb-icon> Settings</a>
       </li>
 
       <!-- Dropdown -->
