--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,6 @@
 <!-- Default form register -->
+
+
 <form class="text-center border border-light p-5" (ngSubmit)="savestudent()" method="POST">
 
   <p class="h4 mb-4">Sign up</p>
@@ -33,7 +35,7 @@
   </small>
 
   <!-- Newsletter -->
-
+  <h1>{{msg}}</h1>
 
   <!-- Sign up button -->
   <button class="btn btn-info my-4 btn-block" type="submit">Register Student</button>
@@ -55,3 +57,4 @@
 
 </form>
 <!-- Default form register -->
+<h1>{{msg}}</h1>
