--- a/src/app/allview/allview.component.html
+++ b/src/app/allview/allview.component.html
@@ -12,11 +12,11 @@
   <tbody>
     <tr *ngFor="let s of students"  class="table-active">
 
-      <td>{{s.id}}Mark</td>
-      <td>{{s.rollnumber}}Mark</td>
-      <td>{{s.name}}Mark</td>
-      <td>{{s.book}}Mark</td>
-      <td>{{s.fees}}Mark</td>
+      <td>{{s.id}}</td>
+      <td>{{s.rollnumber}}</td>
+      <td>{{s.name}}</td>
+      <td>{{s.book}}</td>
+      <td>{{s.fees}}</td>
 
     </tr>
 
