--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -8,7 +8,7 @@
   <div class="form-row mb-4">
       <div class="col">
           <!-- First name -->
-          <input type="text" [(ngModel)]="Students.id"  id="rn" class="form-control" name="id" placeholder="Student id"  >
+          <input type="text" [(ngModel)]="Students.id"   class="form-control" name="id" placeholder="Student id"  >
       </div>
       <div class="col">
           <!-- Last name -->
