--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,75 +55,235 @@
     "
   >
 <router-outlet></router-outlet>
+
+
+
 <!-- Footer -->
-<footer class="bg-light text-center text-lg-start">
-  <!-- Grid container -->
-  <div class="container p-4">
-    <!--Grid row-->
+<footer class="page-footer font-small mdb-color lighten-3 pt-4">
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
+
+    <!-- Grid row -->
     <div class="row">
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Footer Content</h5>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-          molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-          voluptatem veniam, est atque cumque eum delectus sint!
-        </p>
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+
+        <!-- Content -->
+        <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
+        <p>Here you can use rows and columns here to organize your footer content.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate esse quasi,
+          veritatis totam voluptas nostrum.</p>
+
       </div>
-      <!--Grid column-->
+      <!-- Grid column -->
 
-      <!--Grid column-->
-      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Links</h5>
+      <hr class="clearfix w-100 d-md-none">
 
-        <ul class="list-unstyled mb-0">
-          <li>
-            <a href="#!" class="text-dark">Link 1</a>
-          </li>
-          <li>
-            <a href="#!" class="text-dark">Link 2</a>
-          </li>
-          <li>
-            <a href="#!" class="text-dark">Link 3</a>
-          </li>
-          <li>
-            <a href="#!" class="text-dark">Link 4</a>
-          </li>
-        </ul>
-      </div>
-      <!--Grid column-->
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
 
-      <!--Grid column-->
-      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase mb-0">Links</h5>
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!" class="text-dark">Link 1</a>
+            <p>
+              <a href="#!">PROJECTS</a>
+            </p>
           </li>
           <li>
-            <a href="#!" class="text-dark">Link 2</a>
+            <p>
+              <a href="#!">ABOUT US</a>
+            </p>
           </li>
           <li>
-            <a href="#!" class="text-dark">Link 3</a>
+            <p>
+              <a href="#!">BLOG</a>
+            </p>
           </li>
           <li>
-            <a href="#!" class="text-dark">Link 4</a>
+            <p>
+              <a href="#!">AWARDS</a>
+            </p>
           </li>
         </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+        <!-- Contact details -->
+        <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <p>
+              <mdb-icon fas icon="home" class="mr-3"></mdb-icon> Gokulpur Punia, Bihar India
+            </p>
+          </li>
+          <li>
+            <p>
+              <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> subodh.sawan@gmail.com
+            </p>
+          </li>
+          <li>
+            <p>
+              <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> +91 7033998506
+            </p>
+          </li>
+          <li>
+            <p>
+              <mdb-icon fas icon="print" class="mr-3"></mdb-icon> +91 7033998506
+            </p>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+
+        <!-- Social buttons -->
+        <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+
+        <!-- Facebook -->
+        <a mdbBtn floating="true" type="button" color="btn-fb" mdbWavesEffect>
+          <mdb-icon fab icon="facebook"></mdb-icon><br>
+        </a>
+        <!-- Twitter -->
+        <a type="button" mdbBtn floating="true" color="btn-tw" mdbWavesEffect>
+          <mdb-icon fab icon="twitter"></mdb-icon><br>
+        </a>
+        <!-- Google +-->
+        <a type="button" mdbBtn floating="true" color="btn-gplus" mdbWavesEffect>
+          <mdb-icon fab fab icon="google-plus"></mdb-icon><br>
+        </a>
+        <!-- Dribbble -->
+        <a type="button" mdbBtn floating="true" color="btn-dribbble" mdbWavesEffect>
+          <mdb-icon fab icon="dribbble"></mdb-icon>
+        </a>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <div class="container">
+
+    <!--Grid row-->
+    <div class="row">
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-12 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/nature1.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
       </div>
       <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/natur2.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/nature3.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-12 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/nature4.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/nature5.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets//natur6.jpeg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
     </div>
     <!--Grid row-->
+
   </div>
-  <!-- Grid container -->
+  <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-    © 2020 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> Subodh Organization</a>
   </div>
   <!-- Copyright -->
+
 </footer>
 <!-- Footer -->
+
+
+
+
+
