--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--Navbar-->
 
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark red" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-sm navbar-dark red" [containerInside]="false">
 
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand"><img src="../assets/123456.jpg" alt="Avatar"></a></mdb-navbar-brand>
