--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -1,7 +1,7 @@
 h1{
 
   color:blue;
-  
+
 
 }
 .form_container{
@@ -17,11 +17,10 @@ form {
   position: relative;
   color: #333;
   border-radius: 10px;
-  align-self: center;
-  align-items: center;
-  align-content: center;
-
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  margin-top: 5px;
 }
 
 form header {
@@ -32,8 +31,6 @@ form header {
   font-weight: 600;
   border-radius: 10px 10px 0 0;
 }
-
-form label {
   margin-left: 20px;
   display: inline-block;
   margin-top: 30px;
