--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -31,6 +31,8 @@ form header {
   font-weight: 600;
   border-radius: 10px 10px 0 0;
 }
+
+form label {
   margin-left: 20px;
   display: inline-block;
   margin-top: 30px;
