--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -4,14 +4,13 @@
 <form class="text-center border border-light p-5" (ngSubmit)="savestudent()" method="POST">
 
   <p class="h4 mb-4">Sign up</p>
-
-
+<!--
      <div class="col  ">
-           <!-- First name -->
+            First name
 
            <input type="text" [(ngModel)]="Students.id"  id="a" name ="id"class="form-control" placeholder="Student id"  >
       </div><br>
-
+    -->
        <div class="col">
           <!-- rollnumber -->
           <input type="text" [(ngModel)]="Students.rollnumber" class="form-control"  name="rollnumber" placeholder="rollnumber" >
